--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -22,12 +22,12 @@
             {% endif %}
         {% endif %}
 
-        {% if mollie_applepaydirect_enabled == true %}
-            {% if (buyableLegacy) or (buyable and productPrice) > 0 %}
+        {% if mollie_applepaydirect_enabled and ((buyableLegacy) or (buyable and productPrice) > 0) %}
+            {% block page_product_detail_buy_container_apple_direct_component %}
                 <div class="form-row mt-3 justify-content-end">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' with {cols: 'col-8'} %}
                 </div>
-            {% endif %}
+            {% endblock %}
         {% endif %}
     {% endblock %}
 
