--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -128,37 +128,43 @@
     {% parent %}
 
     <template #action-modals="{ item }">
-        <sw-modal v-if="showShippingModal === item.id"
-                  @modal-close="onCloseShippingModal"
-                  :title="$tc('mollie-payments.modals.shipping.title')"
-                  variant="small">
-            <p>
-                {{ $tc('mollie-payments.modals.shipping.content', 0, {
-                    quantity: item.quantity,
-                    shippableQuantity: shippableQuantity(item)
-                }) }}
-            </p>
-
-            <sw-number-field numberType="integer"
-                             size="medium"
-                             :step="1"
-                             :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
-                             :min="0"
-                             :value="1"
-                             :max="shippableQuantity(item)"
-                             v-model="quantityToShip">
-            </sw-number-field>
-
-            <template slot="modal-footer">
-                <sw-button @click="onCloseShippingModal" size="small">
-                    {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
-                </sw-button>
-                <sw-button @click="onConfirmShipping(item)" variant="primary" size="small">
-                    {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
-                </sw-button>
-            </template>
-        </sw-modal>
+        {% block sw_order_line_items_grid_grid_actions_modals_items %}{% endblock %}
     </template>
+{% endblock %}
+
+{% block sw_order_line_items_grid_grid_actions_modals_items %}
+    {% parent %}
+
+    <sw-modal v-if="showShippingModal === item.id"
+              @modal-close="onCloseShippingModal"
+              :title="$tc('mollie-payments.modals.shipping.title')"
+              variant="small">
+        <p>
+            {{ $tc('mollie-payments.modals.shipping.content', 0, {
+                quantity: item.quantity,
+                shippableQuantity: shippableQuantity(item)
+            }) }}
+        </p>
+
+        <sw-number-field numberType="integer"
+                         size="medium"
+                         :step="1"
+                         :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
+                         :min="0"
+                         :value="1"
+                         :max="shippableQuantity(item)"
+                         v-model="quantityToShip">
+        </sw-number-field>
+
+        <template slot="modal-footer">
+            <sw-button @click="onCloseShippingModal" size="small">
+                {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
+            </sw-button>
+            <sw-button @click="onConfirmShipping(item)" variant="primary" size="small">
+                {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
+            </sw-button>
+        </template>
+    </sw-modal>
 {% endblock %}
 
 {% block sw_order_line_items_grid_grid_actions_show %}
