--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -10,19 +10,45 @@
             {% parent %}
         {% endblock %}
 
-        {% block sw_order_line_items_grid_actions_actions %}
-            <div align="right">
+        {% block sw_order_line_items_grid_mollie_actions %}
+            <div align="right"
+                 v-if="isMollieOrder">
                 <sw-button-group :disabled="isLoading">
-                    <sw-button class="sw-order-line-items-grid__actions-container-refund-btn"
-                               variant="ghost"
-                               size="small"
-                               :disabled="!canOpenRefundModal"
-                               v-if="isMollieOrder"
-                               @click="onOpenRefundModal">
-                        <sw-icon name="default-arrow-360-left" decorative>
-                        </sw-icon>
-                        {{ $tc('mollie-payments.general.refundThroughMollie') }}
-                    </sw-button>
+                    {% block sw_order_line_items_grid_mollie_actions_button %}
+                        <sw-button class="sw-order-line-items-grid__actions-refund-btn"
+                                   variant="ghost"
+                                   size="small"
+                                   :disabled="!canOpenRefundModal"
+                                   @click="onOpenRefundModal">
+                            <sw-icon name="default-arrow-360-left" decorative></sw-icon>
+                            {{ $tc('mollie-payments.general.refundThroughMollie') }}
+                        </sw-button>
+                    {% endblock %}
+
+                    {% block sw_order_line_items_grid_mollie_actions_context_button%}
+                        <sw-context-button>
+                            <template #button>
+                                <sw-button
+                                    variant="ghost"
+                                    size="small"
+                                    square>
+                                    <sw-icon name="small-arrow-small-down"
+                                             decorative>
+                                    </sw-icon>
+                                </sw-button>
+                            </template>
+
+                            {% block sw_order_line_items_grid_mollie_actions_dropdown%}
+                                <sw-context-menu-item
+                                    class="sw-order-line-items-grid__actions-ship-button"
+                                    icon="default-object-paperplane"
+                                    @click="onOpenShipOrderModal">
+                                    {{ $tc('mollie-payments.general.shipThroughMollie') }}
+                                </sw-context-menu-item>
+                            {% endblock %}
+
+                        </sw-context-button>
+                    {% endblock %}
                 </sw-button-group>
             </div>
         {% endblock %}
@@ -113,7 +139,7 @@
             </div>
         </sw-container>
 
-        <template slot="modal-footer">
+        <template #modal-footer>
             <sw-button @click="onCloseRefundModal" size="small">
                 {{ $tc('mollie-payments.modals.refund.cancelButton') }}
             </sw-button>
@@ -122,6 +148,14 @@
             </sw-button>
         </template>
     </sw-modal>
+{% endblock %}
+
+{% block sw_order_line_items_grid_grid_columns %}
+    {% parent %}
+
+    <template #column-shippedQuantity="{ item }">
+        {{ shippedQuantity(item) }}
+    </template>
 {% endblock %}
 
 {% block sw_order_line_items_grid_grid_actions %}
@@ -135,29 +169,30 @@
 {% block sw_order_line_items_grid_grid_actions_modals_items %}
     {% parent %}
 
-    <sw-modal v-if="showShippingModal === item.id"
-              @modal-close="onCloseShippingModal"
+    <sw-modal v-if="showShipItemModal === item.id"
+              @modal-close="onCloseShipItemModal"
               :title="$tc('mollie-payments.modals.shipping.title')"
               variant="small">
-        <p>
-            {{ $tc('mollie-payments.modals.shipping.content', 0, {
-                quantity: item.quantity,
-                shippableQuantity: shippableQuantity(item)
-            }) }}
-        </p>
+        <template>
+            <p>
+                {{ $tc('mollie-payments.modals.shipping.content', 0, {
+                    quantity: item.quantity,
+                    shippableQuantity: shippableQuantity(item)
+                }) }}
+            </p>
 
-        <sw-number-field numberType="integer"
-                         size="medium"
-                         :step="1"
-                         :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
-                         :min="0"
-                         :value="1"
-                         :max="shippableQuantity(item)"
-                         v-model="quantityToShip">
-        </sw-number-field>
+            <sw-number-field numberType="int"
+                             size="medium"
+                             :step="1"
+                             :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
+                             :min="0"
+                             :max="shippableQuantity(item)"
+                             v-model="shipQuantity">
+            </sw-number-field>
+        </template>
 
-        <template slot="modal-footer">
-            <sw-button @click="onCloseShippingModal" size="small">
+        <template #modal-footer>
+            <sw-button @click="onCloseShipItemModal" size="small">
                 {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
             </sw-button>
             <sw-button @click="onConfirmShipping(item)" variant="primary" size="small">
@@ -172,7 +207,7 @@
 
     <sw-context-menu-item :disabled="!isShippable(item)"
                           icon="default-object-paperplane"
-                          @click="onShipItem(item)">
+                          @click="onOpenShipItemModal(item)">
         {{ $tc('mollie-payments.general.shipThroughMollie') }}
     </sw-context-menu-item>
 {% endblock %}
