Improve ship item dialog

--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -9,6 +9,7 @@
                               :refunds="refunds"
                               @refund-success="saveAndReload"
                               @refund-cancelled="saveAndReload"
+                              @ship-item-success="saveAndReload"
                               @item-delete="saveAndRecalculate"
                               @item-edit="recalculateAndReload"
                               @existing-item-edit="saveAndRecalculate"
