--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -169,37 +169,63 @@
 {% block sw_order_line_items_grid_grid_actions_modals_items %}
     {% parent %}
 
-    <sw-modal v-if="showShipItemModal === item.id"
-              @modal-close="onCloseShipItemModal"
-              :title="$tc('mollie-payments.modals.shipping.title')"
-              variant="small">
-        <template>
-            <p>
-                {{ $tc('mollie-payments.modals.shipping.content', 0, {
-                    quantity: item.quantity,
-                    shippableQuantity: shippableQuantity(item)
-                }) }}
-            </p>
+    {% block sw_order_line_items_grid_grid_mollie_ship_item_modal %}
+        <sw-modal v-if="showShipItemModal === item.id"
+                  @modal-close="onCloseShipItemModal"
+                  :title="$tc('mollie-payments.modals.shipping.title')"
+                  variant="small">
+            <template>
+                {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_product %}
+                    <h4>{{ item.label }}</h4>
+                {% endblock %}
 
-            <sw-number-field numberType="int"
-                             size="medium"
-                             :step="1"
-                             :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
-                             :min="0"
-                             :max="shippableQuantity(item)"
-                             v-model="shipQuantity">
-            </sw-number-field>
-        </template>
+                {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_description %}
+                    <sw-description-list grid="225px 1fr"
+                                         class="sw-order-detail__summary-data">
+                        {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_summary %}
+                            {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_summary_shipped %}
+                                <dt>{{ $tc('mollie-payments.modals.shipping.summary.shipped') }}</dt>
+                                <dd>{{ shippedQuantity(item) }}</dd>
+                            {% endblock %}
 
-        <template #modal-footer>
-            <sw-button @click="onCloseShipItemModal" size="small">
-                {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
-            </sw-button>
-            <sw-button @click="onConfirmShipping(item)" variant="primary" size="small">
-                {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
-            </sw-button>
-        </template>
-    </sw-modal>
+                            {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_summary_shippable %}
+                                <dt>{{ $tc('mollie-payments.modals.shipping.summary.shippable') }}</dt>
+                                <dd>{{ shippableQuantity(item) }}</dd>
+                            {% endblock %}
+                        {% endblock %}
+                    </sw-description-list>
+                {% endblock %}
+
+                {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_quantity %}
+                    <sw-number-field numberType="int"
+                                     size="medium"
+                                     :step="1"
+                                     :min="0"
+                                     :max="shippableQuantity(item)"
+                                     v-model="shipQuantity">
+                        <template #prefix>
+                            {{ $tc('mollie-payments.modals.shipping.summary.quantity') }}
+                        </template>
+                        <template #suffix>
+                            <sw-icon name="default-basic-stack-block"
+                                     small
+                                     :title="$tc('mollie-payments.modals.shipping.item.shipAll')"
+                                     @click="setMaxQuantity(item)"/>
+                        </template>
+                    </sw-number-field>
+                {% endblock %}
+            </template>
+
+            <template #modal-footer>
+                <sw-button @click="onCloseShipItemModal" size="small">
+                    {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
+                </sw-button>
+                <sw-button @click="onConfirmShipItem(item)" variant="primary" size="small">
+                    {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
+                </sw-button>
+            </template>
+        </sw-modal>
+    {% endblock %}
 {% endblock %}
 
 {% block sw_order_line_items_grid_grid_actions_show %}
