--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -42,6 +42,7 @@
                                 <sw-context-menu-item
                                     class="sw-order-line-items-grid__actions-ship-button"
                                     icon="default-object-paperplane"
+                                    :disabled="shippableLineItems.length === 0"
                                     @click="onOpenShipOrderModal">
                                     {{ $tc('mollie-payments.general.shipThroughMollie') }}
                                 </sw-context-menu-item>
@@ -148,6 +149,29 @@
             </sw-button>
         </template>
     </sw-modal>
+
+    <sw-modal v-if="showShipOrderModal"
+              @modal-close="onCloseShipOrderModal"
+              :title="$tc('mollie-payments.modals.shipping.title')"
+              variant="small">
+        <p>{{ $tc('mollie-payments.modals.shipping.order.description') }}</p>
+        <sw-data-grid class="mollie-ship-order-grid"
+                      :dataSource="shippableLineItems"
+                      :columns="getShipOrderColumns"
+                      :plainAppearance="true"
+                      :showSelection="false"
+                      :showPreviews="false"
+                      :showActions="false"/>
+
+        <template #modal-footer>
+            <sw-button @click="onCloseShipOrderModal" size="small">
+                {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
+            </sw-button>
+            <sw-button @click="onConfirmShipOrder()" variant="primary" size="small" :isLoading="isShipOrderLoading">
+                {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
+            </sw-button>
+        </template>
+    </sw-modal>
 {% endblock %}
 
 {% block sw_order_line_items_grid_grid_columns %}
@@ -176,7 +200,7 @@
                   variant="small">
             <template>
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_product %}
-                    <h4>{{ item.label }}</h4>
+                    {{ $tc('mollie-payments.modals.shipping.item.label') }} <h4>{{ item.label }}</h4>
                 {% endblock %}
 
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_description %}
@@ -184,12 +208,12 @@
                                          class="sw-order-detail__summary-data">
                         {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_summary %}
                             {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_summary_shipped %}
-                                <dt>{{ $tc('mollie-payments.modals.shipping.summary.shipped') }}</dt>
+                                <dt>{{ $tc('mollie-payments.modals.shipping.item.summary.shipped') }}</dt>
                                 <dd>{{ shippedQuantity(item) }}</dd>
                             {% endblock %}
 
                             {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_summary_shippable %}
-                                <dt>{{ $tc('mollie-payments.modals.shipping.summary.shippable') }}</dt>
+                                <dt>{{ $tc('mollie-payments.modals.shipping.item.summary.shippable') }}</dt>
                                 <dd>{{ shippableQuantity(item) }}</dd>
                             {% endblock %}
                         {% endblock %}
@@ -204,7 +228,7 @@
                                      :max="shippableQuantity(item)"
                                      v-model="shipQuantity">
                         <template #prefix>
-                            {{ $tc('mollie-payments.modals.shipping.summary.quantity') }}
+                            {{ $tc('mollie-payments.modals.shipping.item.summary.quantity') }}
                         </template>
                         <template #suffix>
                             <sw-icon name="default-basic-stack-block"
@@ -220,7 +244,7 @@
                 <sw-button @click="onCloseShipItemModal" size="small">
                     {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
                 </sw-button>
-                <sw-button @click="onConfirmShipItem(item)" variant="primary" size="small">
+                <sw-button @click="onConfirmShipItem(item)" variant="primary" size="small" :isLoading="isShipItemLoading">
                     {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
                 </sw-button>
             </template>
