--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -25,7 +25,7 @@
                         </sw-button>
                     {% endblock %}
 
-                    {% block sw_order_line_items_grid_mollie_actions_context_button%}
+                    {% block sw_order_line_items_grid_mollie_actions_context_button %}
                         <sw-context-button>
                             <template #button>
                                 <sw-button
@@ -38,7 +38,7 @@
                                 </sw-button>
                             </template>
 
-                            {% block sw_order_line_items_grid_mollie_actions_dropdown%}
+                            {% block sw_order_line_items_grid_mollie_actions_dropdown %}
                                 <sw-context-menu-item
                                     class="sw-order-line-items-grid__actions-ship-button"
                                     icon="default-object-paperplane"
@@ -163,6 +163,11 @@
                       :showPreviews="false"
                       :showActions="false"/>
 
+        {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
+            <sw-switch-field v-model="showTrackingInfo" :label="$tc('mollie-payments.modals.shipping.showTracking')"/>
+            <mollie-tracking-info v-if="showTrackingInfo" :tracking="tracking"/>
+        {% endblock %}
+
         <template #modal-footer>
             <sw-button @click="onCloseShipOrderModal" size="small">
                 {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
@@ -200,7 +205,7 @@
                   variant="small">
             <template>
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_product %}
-                    {{ $tc('mollie-payments.modals.shipping.item.label') }} <h4>{{ item.label }}</h4>
+                    {{ $tc('mollie-payments.modals.shipping.item.label') }} <strong>{{ item.label }}</strong>
                 {% endblock %}
 
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_description %}
@@ -238,13 +243,19 @@
                         </template>
                     </sw-number-field>
                 {% endblock %}
+
+                {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
+                    <sw-switch-field v-model="showTrackingInfo" :label="$tc('mollie-payments.modals.shipping.showTracking')"/>
+                    <mollie-tracking-info v-if="showTrackingInfo" :tracking="tracking"/>
+                {% endblock %}
             </template>
 
             <template #modal-footer>
                 <sw-button @click="onCloseShipItemModal" size="small">
                     {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
                 </sw-button>
-                <sw-button @click="onConfirmShipItem(item)" variant="primary" size="small" :isLoading="isShipItemLoading">
+                <sw-button @click="onConfirmShipItem(item)" variant="primary" size="small"
+                           :isLoading="isShipItemLoading">
                     {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
                 </sw-button>
             </template>
