--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -17,7 +17,7 @@
 
         {% if mollie_applepaydirect_enabled and productPrice > 0 %}
             {% block component_product_box_action_buy_apple_direct_component %}
-                <div class="mb-2 d-none only-support-apple-pay">
+                <div class="mb-2 d-none only-support-apple-pay js-apple-pay-container">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
                 </div>
             {% endblock %}
