--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -9,6 +9,8 @@
                               :refunds="refunds"
                               @refund-success="saveAndReload"
                               @refund-cancelled="saveAndReload"
+                              @ship-order-success="saveAndReload"
+                              @ship-item-success="saveAndReload"
                               @item-delete="saveAndRecalculate"
                               @item-edit="recalculateAndReload"
                               @existing-item-edit="saveAndRecalculate"
@@ -25,7 +27,7 @@
     <dt v-if="refundAmountPending > 0"><strong>{{ $tc('sw-order.detailExtended.totalRefundsPending') }}</strong></dt>
     <dd v-if="refundAmountPending > 0"><strong>{{ refundAmountPending | currency(order.currency.shortName) }}</strong></dd>
 
-    <dt v-if="shippedItems > 0"><strong>{{ $tc('sw-order.detailExtended.totalShipments', 0, { quantity: shippedItems }) }}</strong></dt>
-    <dd v-if="shippedItems > 0"><strong>{{ shippedAmount | currency(order.currency.shortName) }}</strong></dd>
+    <dt v-if="shippedQuantity > 0"><strong>{{ $tc('sw-order.detailExtended.totalShipments', 0, { quantity: shippedQuantity }) }}</strong></dt>
+    <dd v-if="shippedQuantity > 0"><strong>{{ shippedAmount | currency(order.currency.shortName) }}</strong></dd>
 {% endblock %}
 
