--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -51,8 +51,6 @@
                                     <sw-context-menu-item
                                             class="sw-order-line-items-grid__actions-refund-btn"
                                             icon="default-money-cash"
-                                            variant="ghost"
-                                            size="small"
                                             :disabled="!canOpenRefundModal"
                                             @click="onOpenRefundModal">
                                         {{ $tc('mollie-payments.general.refundThroughMollie') }}
@@ -166,19 +164,28 @@
               @modal-close="onCloseShipOrderModal"
               :title="$tc('mollie-payments.modals.shipping.title')"
               variant="small">
-        <p>{{ $tc('mollie-payments.modals.shipping.order.description') }}</p>
-        <sw-data-grid class="mollie-ship-order-grid"
-                      :dataSource="shippableLineItems"
-                      :columns="getShipOrderColumns"
-                      :plainAppearance="true"
-                      :showSelection="false"
-                      :showPreviews="false"
-                      :showActions="false"/>
+        <sw-container columns="1fr" gap="16px">
+            <p>{{ $tc('mollie-payments.modals.shipping.order.description') }}</p>
 
-        {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
-            <sw-switch-field v-model="showTrackingInfo" :label="$tc('mollie-payments.modals.shipping.showTracking')"/>
-            <mollie-tracking-info v-if="showTrackingInfo" :tracking="tracking"/>
-        {% endblock %}
+            <sw-data-grid class="mollie-ship-order-grid"
+                          :dataSource="shippableLineItems"
+                          :columns="getShipOrderColumns"
+                          :plainAppearance="true"
+                          :showSelection="false"
+                          :showPreviews="false"
+                          :showActions="false"/>
+
+            {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
+                <sw-switch-field v-model="showTrackingInfo"
+                                 :label="$tc('mollie-payments.modals.shipping.showTracking')"
+                                 :noMarginTop="true"
+                                 size="small"/>
+
+                <mollie-tracking-info v-if="showTrackingInfo"
+                                      :delivery="order.deliveries.first()"
+                                      :tracking="tracking"/>
+            {% endblock %}
+        </sw-container>
 
         <template #modal-footer>
             <sw-button @click="onCloseShipOrderModal" size="small">
@@ -213,9 +220,10 @@
                   @modal-close="onCloseShipItemModal"
                   :title="$tc('mollie-payments.modals.shipping.title')"
                   variant="small">
-            <template>
+
+            <sw-container columns="1fr" gap="16px">
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_product %}
-                    {{ $tc('mollie-payments.modals.shipping.item.label') }} <strong>{{ item.label }}</strong>
+                    <div>{{ $tc('mollie-payments.modals.shipping.item.label') }} <strong>{{ item.label }}</strong></div>
                 {% endblock %}
 
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_description %}
@@ -255,10 +263,16 @@
                 {% endblock %}
 
                 {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
-                    <sw-switch-field v-model="showTrackingInfo" :label="$tc('mollie-payments.modals.shipping.showTracking')"/>
-                    <mollie-tracking-info v-if="showTrackingInfo" :tracking="tracking"/>
+                    <sw-switch-field v-model="showTrackingInfo"
+                                     :label="$tc('mollie-payments.modals.shipping.showTracking')"
+                                     :noMarginTop="true"
+                                     size="small"/>
+
+                    <mollie-tracking-info v-if="showTrackingInfo"
+                                          :delivery="order.deliveries.first()"
+                                          :tracking="tracking"/>
                 {% endblock %}
-            </template>
+            </sw-container>
 
             <template #modal-footer>
                 <sw-button @click="onCloseShipItemModal" size="small">
