--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -173,17 +173,19 @@
                           :plainAppearance="true"
                           :showSelection="false"
                           :showPreviews="false"
-                          :showActions="false"/>
+                          :showActions="false">
+            </sw-data-grid>
 
             {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
                 <sw-switch-field v-model="showTrackingInfo"
                                  :label="$tc('mollie-payments.modals.shipping.showTracking')"
                                  :noMarginTop="true"
-                                 size="small"/>
-
+                                 size="small">
+                </sw-switch-field>
                 <mollie-tracking-info v-if="showTrackingInfo"
                                       :delivery="order.deliveries.first()"
-                                      :tracking="tracking"/>
+                                      :tracking="tracking">
+                </mollie-tracking-info>
             {% endblock %}
         </sw-container>
 
@@ -257,7 +259,8 @@
                             <sw-icon name="default-basic-stack-block"
                                      small
                                      :title="$tc('mollie-payments.modals.shipping.item.shipAll')"
-                                     @click="setMaxQuantity(item)"/>
+                                     @click="setMaxQuantity(item)">
+                            </sw-icon>
                         </template>
                     </sw-number-field>
                 {% endblock %}
@@ -266,11 +269,12 @@
                     <sw-switch-field v-model="showTrackingInfo"
                                      :label="$tc('mollie-payments.modals.shipping.showTracking')"
                                      :noMarginTop="true"
-                                     size="small"/>
-
+                                     size="small">
+                    </sw-switch-field>
                     <mollie-tracking-info v-if="showTrackingInfo"
                                           :delivery="order.deliveries.first()"
-                                          :tracking="tracking"/>
+                                          :tracking="tracking">
+                    </mollie-tracking-info>
                 {% endblock %}
             </sw-container>
 
@@ -289,7 +293,9 @@
 
 {% block sw_order_line_items_grid_grid_actions_show %}
     {% parent %}
-    <sw-context-menu-item :disabled="!isShippable(item)" icon="default-package-open" @click="onOpenShipItemModal(item)">
+    <sw-context-menu-item :disabled="!isShippable(item)"
+                          icon="default-package-open"
+                          @click="onOpenShipItemModal(item)">
         {{ $tc('mollie-payments.general.shipThroughMollie') }}
     </sw-context-menu-item>
 {% endblock %}
