[BETA] Credit Card not available for Subscriptions [BETA] Add To Cart - No Default Value [BETA] Mixed Cart leads to exception

--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -81,6 +81,7 @@
                                 <button class="btn btn-block btn-buy"
                                         title="{{ config('MolliePayments.config.addToCartText') }}">
                                     {{ config('MolliePayments.config.addToCartText') }}
+                                    {% if config('MolliePayments.config.addToCartText') is empty %} {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }} {% endif %}
                                 </button>
                             {% else %}
                                 <button class="btn btn-block btn-buy"
