--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -91,6 +91,7 @@
                                             title="{{ config('MolliePayments.config.addToCartText') }}"
                                             aria-label="{{ config('MolliePayments.config.addToCartText') }}">
                                         {{ config('MolliePayments.config.addToCartText') }}
+                                        {% if config('MolliePayments.config.addToCartText') is empty %} {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }} {% endif %}
                                     </button>
                                 {% else %}
                                     <button class="btn btn-primary btn-block btn-buy"
